--- a/arch/arm/boot/dts/am437x-poblano.dts
+++ b/arch/arm/boot/dts/am437x-poblano.dts
@@ -26,9 +26,9 @@
 
 	sound: sound_iface {
 		compatible = "ti,da830-evm-audio";
-		ti,model = "AM437x-SK-EVM";
+		ti,model = "AM437x-poblano";
 		ti,audio-codec = <&audio_codec>;
-		ti,mcasp-controller = <&mcasp1>;
+		ti,mcasp-controller = <&mcasp0>;
 		ti,codec-clock-rate = <12000000>;
 		ti,audio-routing =
 			"Headphone Jack",       "HPLOUT",
@@ -43,16 +43,16 @@
 		pinctrl-0 = <&leds_pins>;
 
 		led@0 {
-			label = "am437x-sk:blue";
+			label = "am437x-poblano:blue";
 			gpios = <&gpio1 20 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "none";
+			linux,default-trigger = "mmc1";
 			default-state = "off";
 		};
 
 		led@1 {
-			label = "am437x-sk:red";
-			gpios = <&gpio1 16 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "none";
+			label = "am437x-poblano:red";
+			gpios = <&gpio3 21 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "heartbeat";
 			default-state = "off";
 		};
 	};
@@ -258,7 +258,7 @@
 
 /* Accelerometer/Magnetometer */
 	lsm303d: lsm303d@1e {
-		compatible = "lsm303d-custom";
+		compatible = "lsm303d";
 		int1-gpio = <&gpio5 12 GPIO_ACTIVE_HIGH>;
 		int2-gpio = <&gpio0 19 GPIO_ACTIVE_HIGH>;
 		reg = <0x1e>;
@@ -309,11 +309,6 @@
 	ti,non-removable;
 };
 
-&edma {
-	ti,edma-xbar-event-map = /bits/ 16 <1 12
-										2 13>;
-};
-
 &mmc3 {
 	/* WiLink8 on MMC2 */
 	status = "okay";
@@ -323,8 +318,8 @@
 	vmmc_aux-supply = <&wl18xx_bt_en>;
 	ti,bus-width = <4>;
 	ti,non-removable;
-	dmas = <&edma 12
-			&edma 13>;
+	dmas = <&edma_xbar 12 0 1>,
+		<&edma_xbar 13 0 2>;
 	dma-names = "tx", "rx";
 	cap-power-off-card;
 	keep-power-in-suspend;
@@ -364,16 +359,16 @@
 	DVDD-supply = <&ldo1>;
 };
 
-&mcasp1 {
+&mcasp0 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&mcasp1_pins>;
+	pinctrl-0 = <&mcasp0_pins>;
 
 	status = "okay";
 
 	op-mode = <0>;
 	tdm-slots = <2>;
 	serial-dir = <
-		0 0 1 2
+		1 2 0 0
 		0 0 0 0
 		0 0 0 0
 		0 0 0 0
@@ -551,7 +546,7 @@
 	leds_pins: leds_pins {
 		pinctrl-single,pins = <
 			0x50  (PIN_OUTPUT | MUX_MODE7)	/* gpmc_a4.gpio1_20 */
-			0x40  (PIN_OUTPUT | MUX_MODE7)	/* gpmc_a0.gpio1_16 */
+			0x1ac (PIN_OUTPUT | MUX_MODE7)	/* mcasp0_ahclkx.gpio3_21 */
 		>;
 	};
 
@@ -672,12 +667,12 @@
 		>;
 	};
 
-	mcasp1_pins: mcasp1_pins {
+	mcasp0_pins: mcasp0_pins {
 		pinctrl-single,pins = <
-			0x10c (PIN_INPUT_PULLDOWN | MUX_MODE4)	/* mii1_crs.mcasp1_aclkx */
-			0x110 (PIN_INPUT_PULLDOWN | MUX_MODE4)	/* mii1_rxerr.mcasp1_fsx */
-			0x108 (PIN_OUTPUT_PULLDOWN | MUX_MODE4)	/* mii1_col.mcasp1_axr2 */
-			0x144 (PIN_INPUT_PULLDOWN | MUX_MODE4)	/* rmii1_ref_clk.mcasp1_axr3 */
+			0x190 (PIN_INPUT_PULLDOWN | MUX_MODE0)	/* mcasp0_aclkx.mcasp0_aclkx */
+			0x194 (PIN_INPUT_PULLDOWN | MUX_MODE0)	/* mcasp0_fsx.mcasp0_fsx */
+			0x198 (PIN_OUTPUT_PULLDOWN | MUX_MODE0)	/* mcasp0_axr0.mcasp0_axr0 */
+			0x1a8 (PIN_INPUT_PULLDOWN | MUX_MODE0)	/* mcasp0_axr1.mcasp0_axr1 */
 			0x60 (PIN_OUTPUT | MUX_MODE7) /* gpmc_a8.gpio1_24 */
 		>;
 	};
@@ -720,18 +715,18 @@
 	cpsw_pins: pinmux_cpsw_pins {
 		pinctrl-single,pins = <
 			/* Slave 1 */
-			0x12c (PIN_INPUT_PULLUP| MUX_MODE2)	/* mii1_txclk.rgmii1_tclk */
+			0x12c (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txclk.rgmii1_tclk */
 			0x114 (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txen.rgmii1_tctl */
 			0x128 (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txd0.rgmii1_td0 */
 			0x124 (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txd1.rgmii1_td1 */
 			0x120 (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txd0.rgmii1_td2 */
 			0x11c (PIN_OUTPUT_PULLDOWN | MUX_MODE2)	/* mii1_txd1.rgmii1_td3 */
-			0x130 (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxclk.rmii1_rclk */
-			0x118 (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxdv.rgmii1_rctl */
-			0x140 (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxd0.rgmii1_rd0 */
-			0x13c (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxd1.rgmii1_rd1 */
-			0x138 (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxd0.rgmii1_rd2 */
-			0x134 (PIN_INPUT_PULLUP | MUX_MODE2)	/* mii1_rxd1.rgmii1_rd3 */
+			0x130 (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxclk.rmii1_rclk */
+			0x118 (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxdv.rgmii1_rctl */
+			0x140 (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxd0.rgmii1_rd0 */
+			0x13c (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxd1.rgmii1_rd1 */
+			0x138 (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxd0.rgmii1_rd2 */
+			0x134 (PIN_INPUT_PULLDOWN | MUX_MODE2)	/* mii1_rxd1.rgmii1_rd3 */
 			/* ethernet interrupt */
 			0x240 (PIN_INPUT_PULLUP | MUX_MODE7)	/* gpio5_10.gpio5_10 */
 			/* ethernet PHY nReset */
