l3gd20h: Use the driver from ST for gyroscope
Signed-off-by: Arun Bharadwaj <arun@gumstix.com>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -726,4 +726,10 @@ config INPUT_LSM303D
 	  Say Y to enable support for the ST LSM303D accelerometer and
 	  magnetometer combo driver.
 
+config INPUT_L3GD20H
+	tristate "ST L3GD20H gyroscope support"
+	depends on INPUT && I2C
+	help
+	  Say Y to enable support for the ST L3GD20H gyroscope driver.
+
 endif
